style(TB): fixes white space on elements that contains text

--- a/src/styles/templateBuilder.less
+++ b/src/styles/templateBuilder.less
@@ -491,6 +491,7 @@
 
   .content {
     flex-grow: 1;
+    white-space: break-spaces;
   }
 
   /* .element.selected,
